--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -1,6 +1,12 @@
 .header {
-  background-color: black;
-  color: white;
-  height: 80px;
-  width: 100%;
+  background: var(--gray-800);
+  display: flex;
+  justify-content: center;
+  padding: 1.25rem 0;
+}
+
+.header  img {
+  height: 10rem;
+  border-radius: 50%;
+  border: 2px solid #323233;
 }
