--- a/src/components/Sidebar.module.css
+++ b/src/components/Sidebar.module.css
@@ -14,6 +14,20 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: calc(8px - 1.5rem - 6px);
+}
+
+.profile strong {
+  margin-top: 1rem;
+  color: var(--gray-100);
+  line-height: 1.6;
+}
+
+.profile span {
+  font-size: 0.875rem;
+  color: var(--gray-400);
+  line-height: 1.6;
+
 }
 
 .sidebar footer {
